--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+.App{
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.Navbar{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em;
+  background-color: blueviolet;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button{
+  background-color: gainsboro;
+  width: 100px;
+  border: none;
+  border-radius: 25px;
+  padding: 0.5rem 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.signin:hover{
+  background-color: limegreen;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.signout:hover{
+  background-color: tomato;
+}
+
+.Welcome{
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 5rem;
+  height: 300px;
 }
 
-.App-link {
-  color: #61dafb;
+.Messagecontainer{
+  padding-bottom: 30px;
+  margin-bottom: 60px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Chat-bubble{
+  background-color: blueviolet;
+  width: max-content;
+  max-width: calc(100% - 5rem);
+  padding: 1rem 2rem;
+  margin: 1rem;
+  border-radius: 25px 25px 25px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.Chat-bubble.right{
+  background-color: #ddd;
+  margin-left: auto;
+  border-radius: 25px 25px 0 25px;
+}
+
+.Chat-bubble-left{
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  margin-right: 10px;
+}
+
+.Chat-bubble-right{
+  display: flex;
+  flex-direction: column;
+}
+
+.username{
+  font-weight: bold;
+}
+
+.usermessage{
+  font-family: sans-serif;
+  font-size: large;
+}
+
+.date{
+  font-weight: bold;
+  align-self: flex-end;
+}
+
+.userinput{
+  display: flex;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  padding: 2rem;
+  background-color: black;
+}
+
+.userinput input{
+  width: 100%;
+  height: 2rem;
+  font-size: 1rem;
+  padding-left: 0.5rem;
+  border-radius: 5px 0 0 5px;
+  border: none;
+}
+
+.userinput input:focus{
+  outline: none;
+}
+
+.userinput>button{
+  height: 2rem;
+  width: 5rem;
+  border-radius: 0 5px 5px 0;
+  border: none;
+  background-color: blueviolet;
+}
+
+.userinput>button:hover{
+  background-color: lawngreen;
 }
